# FalconHTTP

./: CMakeLists.txt  LICENSE  README.md
docs/: Architecture.md
examples/: basic_server.cpp
include/Config/: ServerConfig.h
include/Core/: Connection.h  Listener.h  Server.h  Socket.h
include/FileServer/: FileCache.h  StaticFileServer.h
include/HTTP/: HttpMethod.h  HttpParser.h  HttpRequest.h  HttpResponse.h  HttpSerializer.h  HttpStatus.h  MimeTypes.h
include/Middleware/: Cors.h  Logger.h  Middleware.h  Recovery.h
include/Routing/: PathMatcher.h  Route.h  RouteHandler.h  Router.h
include/Utility/: UrlDecoder.h
libs/FunctionPro/function/: Function.h  MoveOnlyFunction.h
libs/HashMap/: HashMap.tpp
libs/VectorPro/: Iterator.h  Vector.h  Vector.tpp
src/Core/: Connection.cpp  Listener.cpp  Server.cpp  Socket.cpp
src/FileServer/: FileCache.cpp  StaticFileServer.cpp
src/HTTP/: HttpMethod.cpp  HttpParser.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpSerializer.cpp  HttpStatus.cpp  MimeTypes.cpp
src/Middleware/: Cors.cpp  Logger.cpp  Recovery.cpp
src/Routing/: PathMatcher.cpp  Route.cpp  Router.cpp
src/Utility/: UrlDecoder.cpp
tests/: test_all.cpp  test_helper.h  test_http_parser.cpp  test_http_serializer.cpp  test_middleware.cpp  test_path_matcher.cpp  test_router.cpp  test_static_file_server.cpp  test_url_decoder.cpp
